--- a/GUI_Aufgabe/src/main/resources/fxml/login.fxml
+++ b/GUI_Aufgabe/src/main/resources/fxml/login.fxml
@@ -23,8 +23,8 @@
             <TextField fx:id="matrikelnr" layoutX="200.0" layoutY="85.0" promptText="Matrikelnummer" />
             <PasswordField fx:id="passwort" layoutX="200.0" layoutY="132.0" promptText="Passwort" />
             <Button fx:id="loginbutton" layoutX="240.0" layoutY="200.0" mnemonicParsing="false" onAction="#userlogin" text="Einloggen" />
-            <Label fx:id="wronglogin" layoutX="226.0" layoutY="51.0" textFill="#eb0d0d" />
-            <Text fill="#fcfcfc" layoutX="169.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WILLKOMMEN" wrappingWidth="261.521484375">
+            <Label fx:id="wronglogin" layoutX="200.0" layoutY="183.0" prefHeight="17.0" prefWidth="232.0" textFill="#eb0d0d" />
+            <Text fill="#fcfcfc" layoutX="171.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WILLKOMMEN" wrappingWidth="261.521484375">
                <font>
                   <Font size="38.0" />
                </font>
