--- a/src/main/java/com/view/addFilmManuallyGUI.fxml
+++ b/src/main/java/com/view/addFilmManuallyGUI.fxml
@@ -4,11 +4,25 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="527.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.view.AddFilmGUI">
+<AnchorPane prefHeight="527.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controller.AddMovieManually">
    <children>
-      <Button layoutX="584.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="70.0" text="Button" />
-      <Button layoutX="464.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="70.0" text="Button" />
-      <TextField layoutX="173.0" layoutY="394.0" prefHeight="26.0" prefWidth="188.0" />
+      <Button layoutX="553.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="change/save" />
+      <Button layoutX="433.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="Delete changes" />
+      <TextField layoutX="223.0" layoutY="332.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField layoutX="223.0" layoutY="369.0" prefHeight="26.0" prefWidth="311.0" promptText="Insert URL" />
+      <TextField layoutX="223.0" layoutY="293.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField layoutX="223.0" layoutY="251.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField layoutX="223.0" layoutY="210.0" prefHeight="26.0" prefWidth="311.0" promptText="year" />
+      <TextField layoutX="223.0" layoutY="166.0" prefHeight="26.0" prefWidth="311.0" promptText="input in minutes" />
+      <TextField layoutX="223.0" layoutY="123.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField layoutX="223.0" layoutY="76.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField layoutX="49.0" layoutY="77.0" text="Moviecover :" />
+      <TextField layoutX="49.0" layoutY="124.0" text="Category :" />
+      <TextField layoutX="49.0" layoutY="167.0" text="Movielength :" />
+      <TextField layoutX="49.0" layoutY="211.0" text="Release :" />
+      <TextField layoutX="49.0" layoutY="252.0" text="Regisseur :" />
+      <TextField layoutX="49.0" layoutY="294.0" text="Author :" />
+      <TextField layoutX="49.0" layoutY="333.0" text="Cast :" />
+      <TextField layoutX="49.0" layoutY="370.0" text="Cover" />
    </children>
 </AnchorPane>
