--- a/src/main/resources/com/example/gruppeh/addFilmGUI.fxml
+++ b/src/main/resources/com/example/gruppeh/addFilmGUI.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="527.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controller.addMovieManually">
    <children>
-      <Button layoutX="553.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="change/save" />
-      <Button layoutX="433.0" layoutY="458.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="Delete changes" />
-      <TextField layoutX="223.0" layoutY="332.0" prefHeight="26.0" prefWidth="311.0" />
-      <TextField layoutX="223.0" layoutY="369.0" prefHeight="26.0" prefWidth="311.0" promptText="Insert URL" />
-      <TextField layoutX="223.0" layoutY="293.0" prefHeight="26.0" prefWidth="311.0" />
-      <TextField layoutX="223.0" layoutY="251.0" prefHeight="26.0" prefWidth="311.0" />
-      <TextField layoutX="223.0" layoutY="210.0" prefHeight="26.0" prefWidth="311.0" promptText="year" />
-      <TextField layoutX="223.0" layoutY="166.0" prefHeight="26.0" prefWidth="311.0" promptText="input in minutes" />
-      <TextField layoutX="223.0" layoutY="123.0" prefHeight="26.0" prefWidth="311.0" />
-      <TextField layoutX="223.0" layoutY="76.0" prefHeight="26.0" prefWidth="311.0" />
+      <Button fx:id="buttonSave" layoutX="553.0" layoutY="458.0" mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="101.0" text="change/save" />
+      <Button fx:id="buttonAbort" layoutX="433.0" layoutY="458.0" mnemonicParsing="false" onAction="#abort" prefHeight="26.0" prefWidth="101.0" text="Abort" />
+      <TextField fx:id="textCast" layoutX="223.0" layoutY="329.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField fx:id="textPosterSrc" layoutX="223.0" layoutY="369.0" prefHeight="26.0" prefWidth="311.0" promptText="Insert URL" />
+      <TextField fx:id="textAuthor" layoutX="223.0" layoutY="293.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField fx:id="textRegisseur" layoutX="223.0" layoutY="251.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField fx:id="textReleaseDate" layoutX="223.0" layoutY="210.0" prefHeight="26.0" prefWidth="311.0" promptText="year" />
+      <TextField fx:id="textMovielength" layoutX="223.0" layoutY="166.0" prefHeight="26.0" prefWidth="311.0" promptText="input in minutes" />
+      <TextField fx:id="textGenre" layoutX="223.0" layoutY="123.0" prefHeight="26.0" prefWidth="311.0" />
+      <TextField fx:id="textTitle" layoutX="223.0" layoutY="76.0" prefHeight="26.0" prefWidth="311.0" />
       <Label layoutX="49.0" layoutY="77.0" text="Moviecover :" />
       <Label layoutX="49.0" layoutY="124.0" text="Category :" />
       <Label layoutX="49.0" layoutY="167.0" text="Movielength :" />
