--- a/src/main/resources/com/view/Login.fxml
+++ b/src/main/resources/com/view/Login.fxml
@@ -26,7 +26,7 @@
    <right>
       <AnchorPane prefHeight="400.0" prefWidth="413.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="40.0" layoutY="114.0" text="Matrikelnummer" textFill="#f8f6f6">
+            <Label layoutX="40.0" layoutY="114.0" text="Username" textFill="#f8f6f6">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -36,15 +36,10 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="usernameField" layoutX="226.0" layoutY="117.0" promptText="Matirkelnummer" />
+            <TextField fx:id="usernameField" layoutX="226.0" layoutY="117.0" promptText="Username" />
             <PasswordField fx:id="passwordField" layoutX="226.0" layoutY="162.0" promptText="Passwort" />
             <Button fx:id="loginbutton" layoutX="258.0" layoutY="213.0" mnemonicParsing="false" onAction="#loginPressed" prefHeight="28.0" prefWidth="86.0" style="-fx-background-color: black;" text="Login" textFill="#fcf8f8" />
             <Label fx:id="errorlabel" layoutX="244.0" layoutY="192.0" textFill="#e11616" />
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="201.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../login-page.png" />
-               </image>
-            </ImageView>
             <Text layoutX="188.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Noch keinen account?" />
             <Text layoutX="188.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hier Registrieren:" />
             <Button fx:id="registerbutton" layoutX="287.0" layoutY="298.0" mnemonicParsing="false" onMouseClicked="#registerPressed" style="-fx-background-color: black;" text="Registrieren" textFill="#eeecec" />
