--- a/src/main/resources/com/view/Register.fxml
+++ b/src/main/resources/com/view/Register.fxml
@@ -52,7 +52,7 @@
                         <Font size="15.0" />
                     </font>
                 </Text>
-                <Text fill="WHITE" layoutX="382.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname">
+                <Text fill="WHITE" layoutX="382.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nachname">
                     <font>
                         <Font size="15.0" />
                     </font>
@@ -67,16 +67,19 @@
                         <Font size="15.0" />
                     </font>
                 </Text>
-                <Text fill="WHITE" layoutX="380.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+                <Text fill="WHITE" layoutX="382.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Text>
-                <TextField fx:id="username" layoutX="258.0" layoutY="130.0" prefHeight="25.0" prefWidth="114.0" promptText="Mustermann123" />
-                <TextField fx:id="mail" layoutX="258.0" layoutY="170.0" prefHeight="25.0" prefWidth="114.0" promptText="mail@.com" />
-                <TextField fx:id="surname" layoutX="457.0" layoutY="80.0" prefHeight="25.0" prefWidth="114.0" promptText="Mustermann" />
-                <TextField fx:id="name" layoutX="258.0" layoutY="81.0" prefHeight="25.0" prefWidth="114.0" promptText="Max" />
-                <Label fx:id="registererror" layoutX="239.0" layoutY="242.0" />
+                <TextField fx:id="username" layoutX="258.0" layoutY="130.0" prefHeight="25.0" prefWidth="114.0" promptText="Username" />
+                <TextField fx:id="mail" layoutX="258.0" layoutY="170.0" prefHeight="25.0" prefWidth="114.0" promptText="E@mail.com" />
+                <TextField fx:id="surname" layoutX="458.0" layoutY="81.0" prefHeight="25.0" prefWidth="114.0" promptText="Nachname" />
+                <TextField fx:id="name" layoutX="258.0" layoutY="81.0" prefHeight="25.0" prefWidth="114.0" promptText="Name" />
+                <Label fx:id="registererror" layoutX="258.0" layoutY="205.0" textFill="#f20909">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
                 <PasswordField fx:id="passwort" layoutX="457.0" layoutY="130.0" prefHeight="25.0" prefWidth="115.0" promptText="Password" />
             </children>
         </AnchorPane>
