--- a/src/main/resources/com/view/Login.fxml
+++ b/src/main/resources/com/view/Login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to right,aqua, green);" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controller.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to right,aqua, green);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controller.LoginController">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="189.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,7 +26,7 @@
    <right>
       <AnchorPane prefHeight="400.0" prefWidth="413.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="40.0" layoutY="114.0" text="Username" textFill="#f8f6f6">
+            <Label layoutX="40.0" layoutY="114.0" text="eMail" textFill="#f8f6f6">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -36,7 +36,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="usernameField" layoutX="226.0" layoutY="117.0" promptText="Username" />
+            <TextField fx:id="emailField" layoutX="226.0" layoutY="117.0" promptText="Email" />
             <PasswordField fx:id="passwordField" layoutX="226.0" layoutY="162.0" promptText="Passwort" />
             <Button fx:id="loginbutton" layoutX="258.0" layoutY="213.0" mnemonicParsing="false" onAction="#loginPressed" prefHeight="28.0" prefWidth="86.0" style="-fx-background-color: black;" text="Login" textFill="#fcf8f8" />
             <Label fx:id="errorlabel" layoutX="244.0" layoutY="192.0" textFill="#e11616" />
